fix: use Collectors.toList() for Java 11 compatibility (Stream.toList() requires Java 16+)
Agent-Logs-Url: https://github.com/jkowalleck/fork_purl-spec/sessions/9035439c-2ca7-48fb-9fc6-ab9bdcd9f445

Co-authored-by: jkowalleck <2765863+jkowalleck@users.noreply.github.com>